--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,5 +2,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
     "react-redux": "^9.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.14"
   }
 }
